// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshot testing button Off 1`] = `
<DocumentFragment>
  <button
    class="Radiobutton-Off"
    data-testid="ToggleableRadioButton"
    type="button"
  />
</DocumentFragment>
`;

exports[`Snapshot testing button On 1`] = `
<DocumentFragment>
  <button
    class="Radiobutton-On"
    data-testid="ToggleableRadioButton"
    type="button"
  />
</DocumentFragment>
`;
